# sql-metadata

./: pyproject.toml
sql_metadata/: keywords_lists.py  parser.py  token.py
test/: test_create_table.py  test_duckdb.py  test_query.py  test_source_tracking.py  test_weird_quoting.py
