[tool.poetry]
name = "sql_metadata"
version = "2.8.0"
license="MIT"
description = "Uses tokenized query returned by python-sqlparse and generates query metadata"
authors = ["Maciej Brencz <maciej.brencz@gmail.com>", "Radosław Drążkiewicz <collerek@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/macbre/sql-metadata"
repository = "https://github.com/macbre/sql-metadata"

packages = [
    { include="sql_metadata" }
]

[tool.poetry.dependencies]
python = "^3.8"
sqlparse = { git = "https://github.com/hex-inc/sqlparse", rev = "460e8084bc59fe84e00651a96ca2a919006d838c" }

[tool.poetry.dev-dependencies]
black = "^23.9"
coverage = {extras = ["toml"], version = "^6.5"}
pylint = "^2.17.5"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
coveralls = "^3.3.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 100
