[tool.poetry]
name = "sql_metadata"
version = "2.17.0"
license="MIT"
description = "Uses tokenized query returned by python-sqlparse and generates query metadata"
authors = ["Maciej Brencz <maciej.brencz@gmail.com>", "Radosław Drążkiewicz <collerek@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/macbre/sql-metadata"
repository = "https://github.com/macbre/sql-metadata"

packages = [
    { include="sql_metadata" }
]

[tool.poetry.dependencies]
python = "^3.9"
# sqlparse = { path = "../sqlparse", develop = true }
sqlparse = { git = "https://github.com/hex-inc/sqlparse", rev = "70344699b74779cb8b8177a698e9776996ede48c" }

[tool.poetry.dev-dependencies]
black = "^25.1"
coverage = {extras = ["toml"], version = "^7.9"}
pylint = "^3.3.7"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 100
